@@ -166,8 +166,7 @@ namespace LinuxSampler {
 						driver->DispatchBankSelectMsb(MidiGetField(ev,0),Chan(ev));
 					else if (MidiGetField(ev,0) == 32)
 						driver->DispatchBankSelectLsb(MidiGetField(ev,0),Chan(ev));
-					else
-						driver->DispatchControlChange(MidiGetField(ev,0),MidiGetField(ev,0),Chan(ev));
+					driver->DispatchControlChange(MidiGetField(ev,0),MidiGetField(ev,0),Chan(ev));
 					MidiFreeEv(ev);
 					break;
 					
